# intent_classifier

./: .gitignore  README.md  api.py  ollama_classifier.py  pyproject.toml
UTH_conversion/: bm25_filter.py  cleaned_data.py  file_converter.py  pipeline_execution.py  self_labeling.py
engenium/: scrapy.cfg
engenium/engenium/: items.py  middlewares.py  pipelines.py  settings.py
engenium/engenium/spiders/: content_spider.py
