[project]
name = "dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi[standard]>=0.115.12",
    "rank-bm25>=0.2.2",
    "scrapy>=2.13.1",
    "tqdm>=4.67.1",
    "typing>=3.10.0.0",
    "uvicorn>=0.34.3",
]
